src/renderer/pages/Settings.module.scss
.settingsContainer {
  z-index: 1;
  position: absolute;
  right: 1rem;
  top: 3rem;
  width: 20rem;
  height: 30rem;
  padding: 1rem;
  background-color: var(--overlay-color);
  border-radius: var(--border-radius);
  box-shadow: var(--overlay-box-shadow);

  h3 {
    margin-top: 0;
    font-weight: 500;
  }

  h4 {
    font-weight: 300;
    margin-bottom: 0.5rem;
  }

  .titleWithInfo {
    display: flex;

    .infoIcon {
      margin-top: 1.5rem;
      margin-left: 0.4rem;
      height: 0.8rem;
      fill: var(--border-color);
    }
  }

  .connections {
    .connection {
      display: flex;
      align-items: center;
      font-size: small;

      .circle {
        border-radius: 100%;
        background-color: red;
        height: 0.8rem;
        width: 0.8rem;
        margin-right: 0.5rem;
      }

      .circle.connected {
        background-color: green;
      }
    }
  }

  .neverCloseApplications {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    min-height: 2rem;
    background-color: var(--bg-color-3);
    border-radius: var(--border-radius);
    padding: 0.2rem 0.2rem 0.2rem 0.4rem;
    margin-bottom: 0.5rem;

    img {
      cursor: pointer;
    }
  }

  .otherApplications {
    display: flex;
    align-items: center;
    flex-wrap: wrap;

    .plusIcon {
      height: 1rem;
      margin-right: 0.3rem;
      fill: var(--border-color);
    }

    img {
      cursor: pointer;
    }
  }

}

